<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider_line_color"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMood"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_weight="4"

        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextviewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_search">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fldEditTextLayout"
                style="@style/SearchInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/super_hero_name_id"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearch"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/search" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/TextviewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_search">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="@dimen/large_padding" />
</LinearLayout>